--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   },
   "homepage": "https://github.com/discworldian/pangobot#readme",
   "dependencies": {
-    "discord.js": "^12.5.1"
+    "discord.js": "^12.5.1",
+    "js-yaml": "^3.14.1",
+    "yaml": "^1.10.0"
   }
 }
