--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,27 +1,42 @@
-name: Deploy Container to GCP
-
+name: Publish Docker image
 on:
-  workflow_run:
-    workflows: 
-      - "Publish Docker image"
-    branches: 
-      - deploy
-    types: 
-      - completed
-
+  push:
+    branches:
+    - deploy
 jobs:
+  push_to_registry:
+    name: Push Docker image to GitHub Packages
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out the repo
+        uses: actions/checkout@v2
+      - name: Push to GitHub Packages
+        uses: docker/build-push-action@v1
+        with:
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+          registry: docker.pkg.github.com
+          repository: pangolingaming/pangobot/pangobot
+          tag_with_ref: true
+          tag_with_sha: true
+
   deploy:
     name: Deploy
     runs-on: ubuntu-latest
+    needs: push_to_registry
 
     steps:
     - name: Setup gcloud
       uses: google-github-actions/setup-gcloud@master
       with:
+        version: '290.0.1'
         service_account_key: ${{ secrets.GCS_SA_KEY }}
         project_id: ${{ secrets.GCS_PROJECT }}
         export_default_credentials: true
 
+    - run: |-
+        gcloud --quiet auth configure-docker
+
     - name: Deploy
       run: |-
-        gcloud beta compute instances reset pangobot
+        gcloud compute instances reset pangobot
