--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: Publish Docker image
 on:
   push:
     branches:
-    - deploy
+    - main
 jobs:
   push_to_registry:
     name: Push Docker image to GHCR
@@ -17,7 +17,7 @@ jobs:
           password: ${{ secrets.GH_CR_PAT }}
           registry: ghcr.io
           repository: pangolingaming/pangobot
-          tag_with_ref: true
+          tags: latest
           tag_with_sha: true
 
   deploy:
