--- a/content/spells.yaml
+++ b/content/spells.yaml
@@ -3155,6 +3155,10 @@ healing_word:
     A creature of your choice that you can see within range regains hit points
     equal to 1d4 + your spellcasting ability modifier. This spell has no effect
     on undead or constructs.
+  damage: 1d4
+  damageAtHigherLevels: 1d4
+  spellRollText: 'healing'
+  spellType: ['healing']
   source: SRD
 heat_metal:
   spellName: Heat Metal
@@ -3169,7 +3173,19 @@ heat_metal:
   atHigherLevels: >-
     When you cast this spell using a spell slot of 3rd level or higher, the
     damage increases by 1d8 for each slot level above 2nd.
-  description: "Choose a manufactured metal object, such as a metal weapon or a suit of heavy or medium metal armor, that you can see within range. You cause the object to glow red-hot. Any creature in physical contact with the object takes 2d8 fire damage when you cast the spell. Until the spell ends, you can use a bonus action on each of your subsequent turns to cause this damage again.    \r\nIf a creature is holding or wearing the object and takes the damage from it, the creature must succeed on a Constitution saving throw or drop the object if it can. If it doesn't drop the object, it has disadvantage on attack rolls and ability checks until the start of your next turn."
+  description: >-
+    Choose a manufactured metal object, such as a metal weapon or a suit of heavy or 
+    medium metal armor, that you can see within range. You cause the object to glow 
+    red-hot. Any creature in physical contact with the object takes 2d8 fire damage 
+    when you cast the spell. Until the spell ends, you can use a bonus action on each 
+    of your subsequent turns to cause this damage again.    \r\n
+    If a creature is holding or wearing the object and takes the damage from it, the 
+    creature must succeed on a Constitution saving throw or drop the object if it can. 
+    If it doesn't drop the object, it has disadvantage on attack rolls and ability 
+    checks until the start of your next turn.
+  spellType: ['fire']
+  damage: 2d8
+  damageAtHigherLevels: 1d8
   source: SRD
 hellish_rebuke:
   spellName: Hellish Rebuke
@@ -3189,9 +3205,12 @@ hellish_rebuke:
     surrounded by hellish flames. The creature must make a Dexterity saving
     throw. It takes 2d10 fire damage on a failed save, or half as much damage on
     a successful one.
+  spellType: ['fire']
+  damage: 2d10
+  damageAtHigherLevels: 1d10
   source: SRD
-heroes:
-  spellName: Heroes
+heroes_feast:
+  spellName: Heroes' Feast
   spellLevel: "6"
   spellSchool: conjuration
   castingTime: 10 minutes
@@ -3201,6 +3220,9 @@ heroes:
   duration: Instantaneous
   concentration: false
   description: "You bring forth a great feast, including magnificent food and drink. The feast takes 1 hour to consume and disappears at the end of that time, and the beneficial effects don't set in until this hour is over. Up to twelve other creatures can partake of the feast.    \r\nA creature that partakes of the feast gains several benefits. The creature is cured of all diseases and poison, becomes immune to poison and being frightened, and makes all Wisdom saving throws with advantage. Its hit point maximum also increases by 2d10, and it gains the same number of hit points. These benefits last for 24 hours."
+  spellType: ['food', 'healing']
+  damage: 2d10
+  spellRollText: 'healing'
   source: SRD
 heroism:
   spellName: Heroism
@@ -3221,6 +3243,7 @@ heroism:
     equal to your spellcasting ability modifier at the start of each of its
     turns. When the spell ends, the target loses any remaining temporary hit
     points from this spell.
+  spellType: ['buff']
   source: SRD
 hideous_laughter:
   spellName: Hideous Laughter
@@ -3233,6 +3256,7 @@ hideous_laughter:
   duration: "Concentration, up to 1 minute"
   concentration: true
   description: "A creature of your choice that you can see within range perceives everything as hilariously funny and falls into fits of laughter if this spell affects it. The target must succeed on a Wisdom saving throw or fall prone, becoming incapacitated and unable to stand up for the duration. A creature with an Intelligence score of 4 or less isn't affected.    \r\nAt the end of each of its turns, and each time it takes damage, the target can make another Wisdom saving throw. The target has advantage on the saving throw if it's triggered by damage. On a success, the spell ends."
+  spellType: ['stun']
   source: SRD
 hold_monster:
   spellName: Hold Monster
@@ -3253,6 +3277,7 @@ hold_monster:
     a Wisdom saving throw or be paralyzed for the duration. This spell has no
     effect on undead. At the end of each of its turns, the target can make
     another Wisdom saving throw. On a success, the spell ends on the target.
+  spellType: ['stun']
   source: SRD
 hold_person:
   spellName: Hold Person
@@ -3273,6 +3298,7 @@ hold_person:
     a Wisdom saving throw or be paralyzed for the duration. At the end of each
     of its turns, the target can make another Wisdom saving throw. On a success,
     the spell ends on the target.
+  spellType: ['stun']
   source: SRD
 holy_aura:
   spellName: Holy Aura
@@ -3293,9 +3319,10 @@ holy_aura:
     affected creature with a melee attack, the aura flashes with brilliant
     light. The attacker must succeed on a Constitution saving throw or be
     blinded until the spell ends.
+  spellType: ['celestial']
   source: SRD
-hunter:
-  spellName: Hunter
+hunters_mark:
+  spellName: Hunter's Mark
   spellLevel: "1"
   spellSchool: divination
   castingTime: 1 bonus action
@@ -3316,6 +3343,8 @@ hunter:
     any Wisdom (Perception) or Wisdom (Survival) check you make to find it. If
     the target drops to 0 hit points before this spell ends, you can use a bonus
     action on a subsequent turn of yours to mark a new creature.
+  spellType: ['buff']
+  damage: 1d6
   source: SRD
 hypnotic_pattern:
   spellName: Hypnotic Pattern
@@ -3328,6 +3357,7 @@ hypnotic_pattern:
   duration: "Concentration, up to 1 minute"
   concentration: true
   description: "You create a twisting pattern of colors that weaves through the air inside a 30-foot cube within range. The pattern appears for a moment and vanishes. Each creature in the area who sees the pattern must make a Wisdom saving throw. On a failed save, the creature becomes charmed for the duration. While charmed by this spell, the creature is incapacitated and has a speed of 0.    \r\nThe spell ends for an affected creature if it takes any damage or if someone else uses an action to shake the creature out of its stupor."
+  spellType: ['stun']
   source: SRD
 ice_storm:
   spellName: Ice Storm
@@ -3342,7 +3372,15 @@ ice_storm:
   atHigherLevels: >-
     When you cast this spell using a spell slot of 5th level or higher, the
     bludgeoning damage increases by 1d8 for each slot level above 4th.
-  description: "A hail of rock-hard ice pounds to the ground in a 20- foot-radius, 40-foot-high cylinder centered on a point within range. Each creature in the cylinder must make a Dexterity saving throw. A creature takes 2d8 bludgeoning damage and 4d6 cold damage on a failed save, or half as much damage on a successful one.    \r\nHailstones turn the storm's area of effect into difficult terrain until the end of your next turn."
+  description: >-
+    A hail of rock-hard ice pounds to the ground in a 20- foot-radius, 40-foot-high 
+    cylinder centered on a point within range. Each creature in the cylinder must 
+    make a Dexterity saving throw. A creature takes 2d8 bludgeoning damage and 4d6 
+    cold damage on a failed save, or half as much damage on a successful one.    \r\n
+    Hailstones turn the storm's area of effect into difficult terrain until the end 
+    of your next turn.
+  damage: [[damage: '2d8', type: 'bludgeoning'], [damage: '4d6', type: 'cold']]
+  spellType: ['cold', bludgeoning]
   source: SRD
 identify:
   spellName: Identify
