--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,7 +39,7 @@ jobs:
 
     - name: Deploy
       run: |-
-        gcloud compute instances delete pangobot --zone us-central1-a
+        gcloud compute instances delete pangobot --zone us-central1-a || true
         gcloud beta compute
           --project=pangolingaming
           instances create-with-container pangobot
