--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,6 +36,7 @@ jobs:
 
     - run: |-
         gcloud --quiet auth configure-docker
+        gcloud components install beta
 
     - name: Deploy
       run: |-
