--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -44,8 +44,7 @@ jobs:
     
     - name: Create new deployment
       run: >-
-        gcloud beta compute
-          instances create-with-container pangobot
+        gcloud beta compute instances create-with-container pangobot
           --project=pangolingaming
           --zone=us-central1-a
           --machine-type=f1-micro
