--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -51,6 +51,7 @@ jobs:
         --network-tier=PREMIUM
         --metadata=google-logging-enabled=true
         --maintenance-policy=MIGRATE
+        --service-account=github-actions@pangolingaming.iam.gserviceaccount.com
         --scopes=https://www.googleapis.com/auth/devstorage.read_only,https://www.googleapis.com/auth/logging.write,https://www.googleapis.com/auth/monitoring.write,https://www.googleapis.com/auth/servicecontrol,https://www.googleapis.com/auth/service.management.readonly,https://www.googleapis.com/auth/trace.append
         --image=cos-stable-85-13310-1209-10
         --image-project=cos-cloud
